--- a/style.css
+++ b/style.css
@@ -1,6 +1,73 @@
 /*General*/
 
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+html {
+    /*To assure when nav links are done the scroll is smooth*/
+    scroll-behavior: smooth ;
+}
+
+p {
+    color: rgb(85, 85, 85);
+}
+
+/* Transition for links and buttons*/
+
+a, .btn {
+    transition: all 300ms ease;
+}
+
+/* Desktop navigation*/
+
+nav, .nav-links {
+    /*Creating a flex container provides efficient ways to layout items*/
+    display: flex;
+}
+
+nav {
+    /*leaves equal spaces between items and half space at start and end*/
+    justify-content: space-around;
+    align-items: center;
+    /*vh makes it take % of view screen*/
+    height: 20vh;
+}
+
+.nav-links {
+    /*rem is a unit of measurment in front end
+    list-style: none removes the bullet points from the list
+    */
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    color: gray;
+    text-decoration: overline;
+    }
+
+.logo {
+    font-size: 2rem;
+}
+
+/*to make cursor not change when hovering over logo text*/
+.logo:hover {
+    cursor:default;
+}
+
