--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ a {
 
 a:hover{
     color: gray;
-    text-decoration: overline;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
     }
 
 .logo {
