--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ nav, .nav-links {
 }
 
 nav {
-    /*leaves equal spaces between items and half space at start and end*/
+    /*juiify-content defines how the browser distributes space between and around content items
+     space-around: leaves equal spaces between items and half space at start and end*/
     justify-content: space-around;
     align-items: center;
     /*vh makes it take % of view screen*/
@@ -72,3 +73,70 @@ a:hover{
     cursor:default;
 }
 
+
+/*Sections*/
+
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+  }
+  
+.section-container {
+    display: flex;
+}
+
+/*Profile section*/
+
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section_pic-container {
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.section_text {
+    align-self: center;
+    text-align: center;
+}
+
+.section_text p {
+    font-weight: 600;
+}
+
+.section_text_p1 {
+    text-align: center;
+}
+
+.section_text_p2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.title {
+    font-size: 3rem;
+    text-align: center;
+}
+
+#socials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+/*ICONS*/
+
+.icon {
+    cursor: pointer;
+    height: 2rem;
+}
