--- a/style.css
+++ b/style.css
@@ -97,11 +97,15 @@ section {
     height: 80vh;
 }
 
-.section_pic-container {
+.section_pic {
     display: flex;
     height: 400px;
     width: 400px;
     margin: auto 0;
+}
+
+img {
+    border-radius: 50%;
 }
 
 .section_text {
