--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ section {
 }
 
 img {
+    /*border-radius: 50% makes the image a circle*/
     border-radius: 50%;
 }
 
@@ -144,3 +145,33 @@ img {
     cursor: pointer;
     height: 2rem;
 }
+
+/*Buttons*/
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+
+    border: rgb(53, 53, 53) 0.1rem solid;
+    background: rgb(255, 255, 255);
+  }
+  
+.btn:hover {
+    background: rgb(53, 53, 53);   
+    color: white; 
+    cursor: pointer; 
+  }
+  
+.btn-container {
+    gap: 1rem;
+  }
+  
